Add information on ClassLoaders loading duplicated classes
Test: HeapAnalyzerTest#testExtendedReportCustomClassLoaders
Bug: 308567121
Change-Id: Ibd1aff603372f1ee6eff2e26d6ef8315e6c76bca

GitOrigin-RevId: 37296760479ecc885980dc969d24c81320d1f88b